feat(chat-list): add long-press context menu with pin/unpin support
Add a context menu overlay triggered by long-pressing a chat list item.
The menu shows a blurred preview of the chat item with action buttons
for Pin/Unpin, Mute, Archive, and Delete. Pin/Unpin is fully wired to
setChatPinOrder and refreshes the chat list after toggling. Mute,
Archive, and Delete are rendered as placeholders for future implementation.

- New WnChatListContextMenu widget with blur backdrop and fade/scale animation
- WnChatListItem gains onLongPress support
- ChatListTile wires long-press to show context menu for non-pending chats
- useChatList exposes refresh callback to re-subscribe the stream
- Localized pin/unpin/mute/archive strings across all 8 languages
- Full test coverage for context menu, tile integration, and refresh

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -191,5 +191,9 @@
   "signerErrorNoActivity": "Signer konnte nicht gestartet werden. Bitte versuch es erneut.",
   "signerErrorLaunchError": "Signer-App konnte nicht gestartet werden.",
   "signerErrorUnknown": "Ein Fehler ist beim Signer aufgetreten. Bitte versuch es erneut.",
-  "messageNotFound": "Nachricht nicht gefunden"
+  "messageNotFound": "Nachricht nicht gefunden",
+  "pin": "Anheften",
+  "unpin": "Loslösen",
+  "mute": "Stummschalten",
+  "archive": "Archivieren"
 }
