fix: address PR review feedback for context menu
- Fix Italian l10n: change 'unpin' from ambiguous 'Rimuovi' to 'Sblocca'
- Add error handling to setChatPinOrder: wrap in try/catch, only refresh
  on success, show error via WnSystemNotice on failure
- Add stable 'id' field to WnChatListContextMenuAction for locale-safe
  widget keys instead of deriving keys from localized label strings
- Refactor static overlay state to instance-scoped controller: replace
  static _currentEntry/_animatedDismiss/_dismissing with a
  WnChatListContextMenuController that scopes state per menu instance
- Add failedToPinChat l10n string across all 8 languages
- Add tests for pin error handling and onChatListChanged not called on failure

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1027,5 +1027,10 @@
   "archive": "Archive",
   "@archive": {
     "description": "Archive chat context menu action"
+  },
+
+  "failedToPinChat": "Failed to update pin. Please try again.",
+  "@failedToPinChat": {
+    "description": "Error message when pin/unpin operation fails"
   }
 }
