--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -195,5 +195,6 @@
   "pin": "Закрепить",
   "unpin": "Открепить",
   "mute": "Без звука",
-  "archive": "Архивировать"
+  "archive": "Архивировать",
+  "failedToPinChat": "Не удалось закрепить. Попробуйте снова."
 }
