--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -195,5 +195,6 @@
   "pin": "Sabitle",
   "unpin": "Sabitlemeden Kaldır",
   "mute": "Sessiz",
-  "archive": "Arşivle"
+  "archive": "Arşivle",
+  "failedToPinChat": "Sabitleme başarısız. Lütfen tekrar deneyin."
 }
