--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -195,5 +195,6 @@
   "pin": "Anheften",
   "unpin": "Loslösen",
   "mute": "Stummschalten",
-  "archive": "Archivieren"
+  "archive": "Archivieren",
+  "failedToPinChat": "Anheften fehlgeschlagen. Bitte versuche es erneut."
 }
