--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -195,5 +195,6 @@
   "pin": "Fijar",
   "unpin": "Desfijar",
   "mute": "Silenciar",
-  "archive": "Archivar"
+  "archive": "Archivar",
+  "failedToPinChat": "Error al fijar. Por favor, inténtalo de nuevo."
 }
