feat(chat-list): add long-press context menu with pin/unpin support (#211)
* feat(chat-list): add long-press context menu with pin/unpin support

Add a context menu overlay triggered by long-pressing a chat list item.
The menu shows a blurred preview of the chat item with action buttons
for Pin/Unpin, Mute, Archive, and Delete. Pin/Unpin is fully wired to
setChatPinOrder and refreshes the chat list after toggling. Mute,
Archive, and Delete are rendered as placeholders for future implementation.

- New WnChatListContextMenu widget with blur backdrop and fade/scale animation
- WnChatListItem gains onLongPress support
- ChatListTile wires long-press to show context menu for non-pending chats
- useChatList exposes refresh callback to re-subscribe the stream
- Localized pin/unpin/mute/archive strings across all 8 languages
- Full test coverage for context menu, tile integration, and refresh

* fix: address PR review feedback for context menu

- Fix Italian l10n: change 'unpin' from ambiguous 'Rimuovi' to 'Sblocca'
- Add error handling to setChatPinOrder: wrap in try/catch, only refresh
  on success, show error via WnSystemNotice on failure
- Add stable 'id' field to WnChatListContextMenuAction for locale-safe
  widget keys instead of deriving keys from localized label strings
- Refactor static overlay state to instance-scoped controller: replace
  static _currentEntry/_animatedDismiss/_dismissing with a
  WnChatListContextMenuController that scopes state per menu instance
- Add failedToPinChat l10n string across all 8 languages
- Add tests for pin error handling and onChatListChanged not called on failure

* fix(l10n): use 'Rimuovi' for Italian unpin translation

* fix: address second round of PR review feedback

- Rename _entry to _overlay in WnChatListContextMenuController for clarity
- Remove dead no-op static dismiss() method
- Replace private _ContextMenuButton with existing WnButton widget
  (outline type for normal actions, destructive type for delete)

* fix: mak

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Signer-App konnte nicht gestartet werden.",
   "signerErrorUnknown": "Ein Fehler ist beim Signer aufgetreten. Bitte versuch es erneut.",
   "messageNotFound": "Nachricht nicht gefunden",
+  "pin": "Anheften",
+  "unpin": "Loslösen",
+  "mute": "Stummschalten",
+  "archive": "Archivieren",
+  "failedToPinChat": "Anheften fehlgeschlagen. Bitte versuche es erneut.",
   "carouselPrivacyTitle": "Privatsphäre und Sicherheit",
   "carouselPrivacyDescription": "Halte deine Gespräche privat. Selbst bei einem Datenleck bleiben deine Nachrichten sicher.",
   "carouselIdentityTitle": "Wähle deine Identität",
