--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Error al abrir la app del signer.",
   "signerErrorUnknown": "Ocurrió un error con el signer. Por favor, inténtalo de nuevo.",
   "messageNotFound": "Mensaje no encontrado",
+  "pin": "Fijar",
+  "unpin": "Desfijar",
+  "mute": "Silenciar",
+  "archive": "Archivar",
+  "failedToPinChat": "Error al fijar. Por favor, inténtalo de nuevo.",
   "carouselPrivacyTitle": "Privacidad y seguridad",
   "carouselPrivacyDescription": "Mantén tus conversaciones privadas. Incluso en caso de una brecha, tus mensajes permanecen seguros.",
   "carouselIdentityTitle": "Elige tu identidad",
