--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Échec du lancement de l'application signer.",
   "signerErrorUnknown": "Une erreur s'est produite avec le signer. Veuillez réessayer.",
   "messageNotFound": "Message introuvable",
+  "pin": "Épingler",
+  "unpin": "Désépingler",
+  "mute": "Muet",
+  "archive": "Archiver",
+  "failedToPinChat": "Échec de l'épinglage. Veuillez réessayer.",
   "carouselPrivacyTitle": "Confidentialité et sécurité",
   "carouselPrivacyDescription": "Gardez vos conversations privées. Même en cas de violation, vos messages restent sécurisés.",
   "carouselIdentityTitle": "Choisissez votre identité",
