--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Avvio dell'app signer non riuscito.",
   "signerErrorUnknown": "Si è verificato un errore con il signer. Riprova.",
   "messageNotFound": "Messaggio non trovato",
+  "pin": "Fissa",
+  "unpin": "Rimuovi",
+  "mute": "Silenzia",
+  "archive": "Archivia",
+  "failedToPinChat": "Impossibile aggiornare il fissaggio. Riprova.",
   "carouselPrivacyTitle": "Privacy e sicurezza",
   "carouselPrivacyDescription": "Mantieni le tue conversazioni private. Anche in caso di violazione, i tuoi messaggi rimangono sicuri.",
   "carouselIdentityTitle": "Scegli la tua identità",
