--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Falha ao iniciar o app do signer.",
   "signerErrorUnknown": "Ocorreu um erro com o signer. Por favor, tente novamente.",
   "messageNotFound": "Mensagem não encontrada",
+  "pin": "Fixar",
+  "unpin": "Desafixar",
+  "mute": "Silenciar",
+  "archive": "Arquivar",
+  "failedToPinChat": "Erro ao fixar. Por favor, tente novamente.",
   "carouselPrivacyTitle": "Privacidade e segurança",
   "carouselPrivacyDescription": "Mantenha suas conversas privadas. Mesmo em caso de violação, suas mensagens permanecem seguras.",
   "carouselIdentityTitle": "Escolha sua identidade",
