--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Не удалось запустить приложение signer.",
   "signerErrorUnknown": "Произошла ошибка с signer. Попробуйте снова.",
   "messageNotFound": "Сообщение не найдено",
+  "pin": "Закрепить",
+  "unpin": "Открепить",
+  "mute": "Без звука",
+  "archive": "Архивировать",
+  "failedToPinChat": "Не удалось закрепить. Попробуйте снова.",
   "carouselPrivacyTitle": "Конфиденциальность и безопасность",
   "carouselPrivacyDescription": "Сохраняйте конфиденциальность ваших разговоров. Даже в случае утечки ваши сообщения остаются защищёнными.",
   "carouselIdentityTitle": "Выберите свою личность",
