--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -193,6 +193,11 @@
   "signerErrorLaunchError": "Signer uygulaması başlatılamadı.",
   "signerErrorUnknown": "Signer ile bir hata oluştu. Lütfen tekrar deneyin.",
   "messageNotFound": "Mesaj bulunamadı",
+  "pin": "Sabitle",
+  "unpin": "Sabitlemeden Kaldır",
+  "mute": "Sessiz",
+  "archive": "Arşivle",
+  "failedToPinChat": "Sabitleme başarısız. Lütfen tekrar deneyin.",
   "carouselPrivacyTitle": "Gizlilik ve güvenlik",
   "carouselPrivacyDescription": "Konuşmalarınızı gizli tutun. Bir ihlal durumunda bile mesajlarınız güvende kalır.",
   "carouselIdentityTitle": "Kimliğinizi seçin",
