--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1052,5 +1052,25 @@
   "backToSignUp": "Back to sign up",
   "@backToSignUp": {
     "description": "Button to return to signup from carousel"
+  },
+
+  "deleteAllData": "Delete All Data",
+  "@deleteAllData": {
+    "description": "Button to delete all application data"
+  },
+
+  "deleteAllDataConfirmation": "Delete all data?",
+  "@deleteAllDataConfirmation": {
+    "description": "Confirmation dialog title for delete all data"
+  },
+
+  "deleteAllDataWarning": "This will permanently delete all your chats, messages, and settings from this device. This action cannot be undone.",
+  "@deleteAllDataWarning": {
+    "description": "Warning message for delete all data action"
+  },
+
+  "allDataDeleted": "All data deleted successfully",
+  "@allDataDeleted": {
+    "description": "Success message when all data is deleted"
   }
 }
