--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -200,5 +200,9 @@
   "carouselDecentralizedTitle": "Décentralisé et sans permission",
   "carouselDecentralizedDescription": "Aucune autorité centrale ne contrôle votre communication – pas de permissions nécessaires, pas de censure possible.",
   "learnMore": "En savoir plus",
-  "backToSignUp": "Retour à l'inscription"
+  "backToSignUp": "Retour à l'inscription",
+  "deleteAllData": "Supprimer Toutes les Données",
+  "deleteAllDataConfirmation": "Supprimer toutes les données ?",
+  "deleteAllDataWarning": "Cela supprimera définitivement tous vos chats, messages et paramètres de cet appareil. Cette action ne peut pas être annulée.",
+  "allDataDeleted": "Toutes les données ont été supprimées avec succès"
 }
