--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -200,5 +200,9 @@
   "carouselDecentralizedTitle": "Decentralizzato e senza permessi",
   "carouselDecentralizedDescription": "Nessuna autorità centrale controlla la tua comunicazione – nessun permesso necessario, nessuna censura possibile.",
   "learnMore": "Scopri di più",
-  "backToSignUp": "Torna alla registrazione"
+  "backToSignUp": "Torna alla registrazione",
+  "deleteAllData": "Elimina Tutti i Dati",
+  "deleteAllDataConfirmation": "Eliminare tutti i dati?",
+  "deleteAllDataWarning": "Questo eliminerà permanentemente tutte le tue chat, messaggi e impostazioni da questo dispositivo. Questa azione non può essere annullata.",
+  "allDataDeleted": "Tutti i dati sono stati eliminati con successo"
 }
