Localize the delete failure notice

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1069,6 +1069,11 @@
     "description": "Warning message for delete all data action"
   },
 
+  "deleteAllDataError": "Failed to delete all data. Please try again.",
+  "@deleteAllDataError": {
+    "description": "Error message when data deletion fails"
+  },
+
   "allDataDeleted": "All data deleted successfully",
   "@allDataDeleted": {
     "description": "Success message when all data is deleted"
