--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -204,5 +204,6 @@
   "deleteAllData": "Elimina Tutti i Dati",
   "deleteAllDataConfirmation": "Eliminare tutti i dati?",
   "deleteAllDataWarning": "Questo eliminerà permanentemente tutte le tue chat, messaggi e impostazioni da questo dispositivo. Questa azione non può essere annullata.",
+  "deleteAllDataError": "Impossibile eliminare tutti i dati. Riprova.",
   "allDataDeleted": "Tutti i dati sono stati eliminati con successo"
 }
