--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -204,5 +204,6 @@
   "deleteAllData": "Alle Daten Löschen",
   "deleteAllDataConfirmation": "Alle Daten löschen?",
   "deleteAllDataWarning": "Dies wird alle Ihre Chats, Nachrichten und Einstellungen von diesem Gerät dauerhaft löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
+  "deleteAllDataError": "Fehler beim Löschen aller Daten. Bitte versuchen Sie es erneut.",
   "allDataDeleted": "Alle Daten wurden erfolgreich gelöscht"
 }
