--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -204,5 +204,6 @@
   "deleteAllData": "Tüm Verileri Sil",
   "deleteAllDataConfirmation": "Tüm veriler silinsin mi?",
   "deleteAllDataWarning": "Bu işlem, bu cihazdaki tüm sohbetlerinizi, mesajlarınızı ve ayarlarınızı kalıcı olarak silecektir. Bu işlem geri alınamaz.",
+  "deleteAllDataError": "Tüm veriler silinemedi. Lütfen tekrar deneyin.",
   "allDataDeleted": "Tüm veriler başarıyla silindi"
 }
