--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -204,6 +204,5 @@
   "deleteAllData": "Excluir Todos os Dados",
   "deleteAllDataConfirmation": "Excluir todos os dados?",
   "deleteAllDataWarning": "Isso excluirá permanentemente todos os seus chats, mensagens e configurações deste dispositivo. Esta ação não pode ser desfeita.",
-  "deleteAllDataError": "Falha ao excluir todos os dados. Por favor, tente novamente.",
-  "allDataDeleted": "Todos os dados foram excluídos com sucesso"
+  "deleteAllDataError": "Falha ao excluir todos os dados. Por favor, tente novamente."
 }
