--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -204,6 +204,5 @@
   "deleteAllData": "Удалить все данные",
   "deleteAllDataConfirmation": "Удалить все данные?",
   "deleteAllDataWarning": "Это действие безвозвратно удалит все ваши чаты, сообщения и настройки с этого устройства. Отменить невозможно.",
-  "deleteAllDataError": "Не удалось удалить все данные. Пожалуйста, попробуйте снова.",
-  "allDataDeleted": "Все данные успешно удалены"
+  "deleteAllDataError": "Не удалось удалить все данные. Пожалуйста, попробуйте снова."
 }
