feat: add translations for invite to wn callout

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -142,7 +142,8 @@
   "follow": "Folgen",
   "unfollow": "Entfolgen",
   "failedToStartChat": "Chat konnte nicht gestartet werden. Bitte versuchen Sie es erneut.",
-  "userNotOnWhiteNoise": "Dieser Benutzer ist noch nicht bei White Noise.",
+  "inviteToWhiteNoise": "Zu White Noise einladen",
+  "inviteToWhiteNoiseDescription": "{name} ist noch nicht bei White Noise. Teilen Sie die App, um einen sicheren Chat zu starten.",
   "failedToUpdateFollow": "Folgestatus konnte nicht aktualisiert werden. Bitte versuchen Sie es erneut.",
   "imagePickerError": "Bild konnte nicht ausgewählt werden. Bitte versuchen Sie es erneut.",
   "scanNsec": "QR-Code scannen",
