--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -142,7 +142,8 @@
   "follow": "Seguir",
   "unfollow": "Dejar de seguir",
   "failedToStartChat": "Error al iniciar el chat. Por favor, inténtalo de nuevo.",
-  "userNotOnWhiteNoise": "Este usuario aún no está en White Noise.",
+  "inviteToWhiteNoise": "Invitar a White Noise",
+  "inviteToWhiteNoiseDescription": "{name} aún no está en White Noise. Comparte la app para iniciar un chat seguro.",
   "failedToUpdateFollow": "Error al actualizar el estado de seguimiento. Por favor, inténtalo de nuevo.",
   "imagePickerError": "Error al seleccionar imagen. Por favor, inténtalo de nuevo.",
   "scanNsec": "Escanear código QR",
