--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -142,7 +142,8 @@
   "follow": "Suivre",
   "unfollow": "Ne plus suivre",
   "failedToStartChat": "Échec du démarrage de la discussion. Veuillez réessayer.",
-  "userNotOnWhiteNoise": "Cet utilisateur n'est pas encore sur White Noise.",
+  "inviteToWhiteNoise": "Inviter sur White Noise",
+  "inviteToWhiteNoiseDescription": "{name} n'est pas encore sur White Noise. Partagez l'application pour démarrer une discussion sécurisée.",
   "failedToUpdateFollow": "Échec de la mise à jour du statut de suivi. Veuillez réessayer.",
   "imagePickerError": "Échec de la sélection de l'image. Veuillez réessayer.",
   "scanNsec": "Scanner le code QR",
