--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -142,7 +142,8 @@
   "follow": "Segui",
   "unfollow": "Smetti di seguire",
   "failedToStartChat": "Impossibile avviare la chat. Riprova.",
-  "userNotOnWhiteNoise": "Questo utente non è ancora su White Noise.",
+  "inviteToWhiteNoise": "Invita su White Noise",
+  "inviteToWhiteNoiseDescription": "{name} non è ancora su White Noise. Condividi l'app per avviare una chat sicura.",
   "failedToUpdateFollow": "Impossibile aggiornare lo stato del seguito. Riprova.",
   "imagePickerError": "Impossibile selezionare l'immagine. Riprova.",
   "scanNsec": "Scansiona codice QR",
