--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -142,7 +142,8 @@
   "follow": "Seguir",
   "unfollow": "Deixar de seguir",
   "failedToStartChat": "Falha ao iniciar a conversa. Por favor, tente novamente.",
-  "userNotOnWhiteNoise": "Este usuário ainda não está no White Noise.",
+  "inviteToWhiteNoise": "Convidar para o White Noise",
+  "inviteToWhiteNoiseDescription": "{name} ainda não está no White Noise. Compartilhe o app para iniciar uma conversa segura.",
   "failedToUpdateFollow": "Falha ao atualizar o status de seguir. Por favor, tente novamente.",
   "imagePickerError": "Falha ao selecionar imagem. Por favor, tente novamente.",
   "scanNsec": "Escanear código QR",
