--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -142,7 +142,8 @@
   "follow": "Подписаться",
   "unfollow": "Отписаться",
   "failedToStartChat": "Не удалось начать чат. Попробуйте снова.",
-  "userNotOnWhiteNoise": "Этот пользователь ещё не в White Noise.",
+  "inviteToWhiteNoise": "Пригласить в White Noise",
+  "inviteToWhiteNoiseDescription": "{name} ещё не в White Noise. Поделитесь приложением, чтобы начать безопасный чат.",
   "failedToUpdateFollow": "Не удалось обновить статус подписки. Попробуйте снова.",
   "imagePickerError": "Не удалось выбрать изображение. Попробуйте снова.",
   "scanNsec": "Сканировать QR-код",
