--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -142,7 +142,8 @@
   "follow": "Takip et",
   "unfollow": "Takibi bırak",
   "failedToStartChat": "Sohbet başlatılamadı. Lütfen tekrar deneyin.",
-  "userNotOnWhiteNoise": "Bu kullanıcı henüz White Noise'da değil.",
+  "inviteToWhiteNoise": "White Noise'a Davet Et",
+  "inviteToWhiteNoiseDescription": "{name} henüz White Noise'da değil. Güvenli bir sohbet başlatmak için uygulamayı paylaşın.",
   "failedToUpdateFollow": "Takip durumu güncellenemedi. Lütfen tekrar deneyin.",
   "imagePickerError": "Görsel seçilemedi. Lütfen tekrar deneyin.",
   "scanNsec": "QR kodu tara",
